--- a/templates/chat_window.html
+++ b/templates/chat_window.html
@@ -1,5 +1,5 @@
 <!-- Chat Window -->
-<div id="chat-window" class="chat-window">
+<div id="chat-window" class="chat-window" style="display: none;">
   <!-- Chat Header -->
   <div class="chat-header">
     <div class="chat-title">
