--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,8 @@
         {% block content %}{% endblock %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.2"></script>
+    <script src="{{ url_for('static', filename='js/entity_modals.js') }}"></script>
     
     <!-- Chat Window -->
     {% include 'chat_window.html' %}
